# Copyright (C) 2018 by Sunil

package(default_visibility = ["//visibility:public"])

licenses(["notice"]) # MIT license

# bloom filter library
alias(
    name = "bf",
    actual = "//bloom-filter:bloom-filter"
)

# count min sketch library
alias(
    name = "cms",
    actual = "//count-min:count-min"
)

# hyper log log library
alias(
    name = "hll",
    actual = "//hyper-log-log:hll"
)
