# Copyright (C) 2018 by Sunil

package(default_visibility = ["//visibility:public"])

licenses(["notice"]) # MIT license

# bloom filter library
alias(
    name = "bf",
    actual = "//src:bloom-filter"
)

# count min sketch library
alias(
    name = "cms",
    actual = "//src:count-min"
)

# hyper log log library
alias(
    name = "hll",
    actual = "//src:hll"
)
