# Copyright (C) 2018 by Sunil

package(default_visibility = ["//visibility:public"])

licenses(["notice"]) # MIT license

cc_test(
    name = "bf-tests",
    srcs = ["bloom-filter-tests.cc"],
    deps = [
        "//:bf",
        "@gtest//:main"
    ],
    copts = ["-Iexternal/gtest/include"],
)

cc_test(
    name = "cms-tests",
    srcs = ["count-min-tests.cc"],
    deps = [
        "//:cms",
        "@gtest//:main"
    ],
    copts = ["-Iexternal/gtest/include"],
)

cc_test(
    name = "hll-tests",
    srcs = ["hyper-log-log-tests.cc"],
    deps = [
        "//:hll",
        "@gtest//:main"
    ],
    copts = ["-Iexternal/gtest/include"],
)
